
_____________________________________________________________________________________________________


                                       CFDWARP CHANGELOG

_____________________________________________________________________________________________________


2022 JUN 03a
  * in model/chem/*/chem.c
    - got rid of mu within parameters passed to find_dW_dx() 
  * in model/fluid/*/fluid_source.c
    - in find_dSchem_dU() and test_dSchem_dU(), got rid of mu within parameters
  * in model/fluid/_Navier-Stokes_plasma/fluid_bdry.c
    - in write_bdry_fluid_template(), added gammaeminus to the list of parameters when using 
      a BDRY_WALLTFIXED1 boundary condition
  * in model/share/chem_share.c
    - got rid of mu within parameters passed to test_dW_dx()


2022 JUN 02b
  * in model/transport
    - renamed _dixonlewis to _Dixon-Lewis
    - renamed _capitelli to _Capitelli
    - renamed _guptayos to _Gupta-Yos
  * in model/transport/_Gupta-Yos/transport.c
    - in _muk_from_chik_N_T_Te_aav_Ai_Delta1(), fixed a bug: the thermal conductivity used to
      find the mobility did not include the non-translational components
  * in config/config.c
    - in ask_number_question(), changed the default input for -O to -O1 instead of -O3
  * in .makefile-header-default, in CFLAGS, changed -O3 to -O1
  

2022 JUN 02a
  * in model/emfield/_Epotential*/emfield.c
    - removed function _mu()
    - in find_prim_emfield_mem_2(), removed line that sets ns->mumem
  * in model/emfield/_Epotential-Bfixed/emfield.c
    - in find_Ek_muk_mem() and find_Ek_muk_mem_nonlocal(), now calls _mu(np,gl,l,k) instead 
      of _muk_from_rhok_T_Te_Ek()
  * in model/fluid/_*_plasma/fluid.c
    - the functions _kappan(), _kappai(), _kappae(), _eta(), _nu(), find_prim_fluid_mem() were 
      rewritten so that they call find_nuk_eta_kappak_muk() 
    - added function _mu()
  * in model/fluid/_*_plasma/fluid_plasma.c
    - deleted _mu_test
    - in find_H1 and find_H2, removed call to _mu_test