@@ -2,7 +2,6 @@ current  emfield
 message  EM Field Model
 option   none
 optionP   Epotential
-optionPX   Epotential-Te
 optionP   Epotential-Bfixed
 help     Choose "none" if simulating a non-ionized gas. Choose "Epotential" if simulating a plasma without an external magnetic field using a potential based on Ohm's or Gauss's law. Choose "Epotential-Bfixed" if simulating a plasma under the influence of an external magnetic field using a potential based on either Ohm's or Gauss's law.  Note that both strategies guarantee that Gauss's law is satisfied and are thus suitable to non-neutral plasmas.
 END
